--- a/app/src/main/res/layout/activity_input.xml
+++ b/app/src/main/res/layout/activity_input.xml
@@ -12,7 +12,7 @@
     tools:context="spreadsheet.exchangebook.InputActivity">
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="267dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="1">
