--- a/app/src/main/res/layout/activity_new_operation.xml
+++ b/app/src/main/res/layout/activity_new_operation.xml
@@ -30,7 +30,7 @@
                 android:text="Назад"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/Назад"
+                android:id="@+id/Button"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
@@ -42,10 +42,10 @@
                 android:id="@+id/NEW"
                 android:layout_marginLeft="48dp"
                 android:layout_marginStart="48dp"
-                android:layout_alignBaseline="@+id/Назад"
-                android:layout_alignBottom="@+id/Назад"
-                android:layout_toRightOf="@+id/Назад"
-                android:layout_toEndOf="@+id/Назад" />
+                android:layout_alignBaseline="@+id/Button"
+                android:layout_alignBottom="@+id/Button"
+                android:layout_toRightOf="@+id/Button"
+                android:layout_toEndOf="@+id/Button" />
 
         </RelativeLayout>
 
