--- a/app/src/main/res/layout/activity_list1.xml
+++ b/app/src/main/res/layout/activity_list1.xml
@@ -15,7 +15,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_below="@+id/linearLayout6"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
@@ -30,7 +29,7 @@
             android:text="11.11.16"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/Date 2 "
+            android:id="@+id/Date2"
             android:textSize="24sp" />
 
     </LinearLayout>
@@ -40,7 +39,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
-        android:layout_alignTop="@+id/linearLayout2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:weightSum="1"
@@ -67,11 +65,9 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/linearLayout3"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="103dp"
-        android:layout_alignBottom="@+id/linearLayout7">
+        android:layout_marginTop="103dp">
 
         <TextView
             android:text="Сумма"
@@ -93,7 +89,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="152dp"
-        android:layout_alignTop="@+id/linearLayout4"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
@@ -147,7 +142,7 @@
                 android:text="Комментарии :"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/Commit2" />
+                android:id="@+id/TextCommit2" />
 
             <EditText
                 android:layout_width="match_parent"
