--- a/app/src/main/res/layout/activity_list1.xml
+++ b/app/src/main/res/layout/activity_list1.xml
@@ -11,154 +11,154 @@
     tools:context="spreadsheet.exchangebook.List1">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_below="@+id/linearLayout6"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/linearLayout6"
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal">
 
         <TextView
-            android:text="Дата"
+            android:id="@+id/textView7"
             android:layout_width="154dp"
             android:layout_height="wrap_content"
-            android:id="@+id/textView7"
+            android:text="Дата"
             android:textSize="24sp" />
 
         <TextView
-            android:text="11.11.16"
+            android:id="@+id/textDate2 "
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/Date 2 "
+            android:text="11.11.16"
             android:textSize="24sp" />
 
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:id="@+id/Time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
-        android:layout_alignTop="@+id/linearLayout2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:weightSum="1"
-        android:id="@+id/Time">
+        android:layout_alignTop="@+id/linearLayout2"
+        android:layout_marginTop="68dp"
+        android:orientation="horizontal"
+        android:weightSum="1">
 
         <TextView
-            android:text="Время"
+            android:id="@+id/textView9"
             android:layout_width="152dp"
             android:layout_height="wrap_content"
-            android:id="@+id/textView9"
-            android:textSize="24sp"
-            android:layout_gravity="left|right" />
+            android:layout_gravity="left|right"
+            android:text="Время"
+            android:textSize="24sp" />
 
         <TextView
-            android:text="12:12:16"
+            android:id="@+id/textView14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView14"
-            android:textSize="24sp"
-            android:paddingRight="10dp" />
+            android:paddingRight="10dp"
+            android:text="12:12:16"
+            android:textSize="24sp" />
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/linearLayout3"
+        android:layout_alignBottom="@+id/linearLayout7"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/linearLayout3"
         android:layout_marginTop="103dp"
-        android:layout_alignBottom="@+id/linearLayout7">
+        android:orientation="horizontal">
 
         <TextView
-            android:text="Сумма"
+            android:id="@+id/textView10"
             android:layout_width="154dp"
             android:layout_height="match_parent"
-            android:id="@+id/textView10"
+            android:text="Сумма"
             android:textSize="24sp" />
 
         <TextView
-            android:text="12345.6"
+            android:id="@+id/Summ"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/Summ"
+            android:text="12345.6"
             android:textSize="24sp" />
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="152dp"
-        android:layout_alignTop="@+id/linearLayout4"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/linearLayout4"
+        android:layout_marginTop="152dp"
+        android:orientation="horizontal">
 
         <TextView
-            android:text="Сумма"
+            android:id="@+id/textView11"
             android:layout_width="156dp"
             android:layout_height="wrap_content"
-            android:id="@+id/textView11"
+            android:text="Сумма"
             android:textSize="24sp" />
 
         <TextView
-            android:text="12345.6"
+            android:id="@+id/Summ2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/Summ2"
+            android:text="12345.6"
             android:textSize="24sp" />
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:orientation="vertical">
 
         <TextView
-            android:text="Покупка"
+            android:id="@+id/textView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/textView6" />
+            android:text="Покупка" />
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:id="@+id/Comm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="1"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="15dp"
-        android:id="@+id/Comm">
+        android:orientation="horizontal"
+        android:weightSum="1">
 
         <LinearLayout
-            android:orientation="vertical"
+            android:id="@+id/Commit2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/Commit2">
+            android:orientation="vertical">
 
             <TextView
-                android:text="Комментарии :"
+                android:id="@+id/Commit2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/Commit2" />
+                android:text="Комментарии :" />
 
             <EditText
+                android:id="@+id/editText4"
                 android:layout_width="match_parent"
                 android:layout_height="158dp"
-                android:inputType="textPersonName"
-                android:text="Все что вы хотели сказать но боялись "
-                android:ems="10"
-                android:id="@+id/editText4"
-                android:layout_marginTop="91dp"
                 android:layout_below="@+id/linearLayout5"
-                android:layout_centerHorizontal="true" />
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="91dp"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="Все что вы хотели сказать но боялись " />
 
         </LinearLayout>
 
