--- a/app/src/main/res/layout/activity_new_operation.xml
+++ b/app/src/main/res/layout/activity_new_operation.xml
@@ -27,25 +27,25 @@
             android:layout_alignParentTop="true">
 
             <Button
-                android:id="@+id/Button"
+                android:id="@+id/button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:text="Назад" />
+                android:text="@string/Back" />
 
             <TextView
                 android:id="@+id/NEW"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/Button"
-                android:layout_alignBottom="@+id/Button"
+                android:layout_alignBaseline="@+id/button"
+                android:layout_alignBottom="@+id/button"
                 android:layout_marginLeft="48dp"
                 android:layout_marginStart="48dp"
-                android:layout_toEndOf="@+id/Button"
-                android:layout_toRightOf="@+id/Button"
-                android:text="Новый обмен" />
+                android:layout_toEndOf="@+id/button"
+                android:layout_toRightOf="@+id/button"
+                android:text="@string/new_exchange" />
 
         </RelativeLayout>
 
