--- a/app/src/main/res/layout/activity_list1.xml
+++ b/app/src/main/res/layout/activity_list1.xml
@@ -144,7 +144,7 @@
             android:layout_weight="1"
             android:text="Комментарии :" />
 
-        <EditText
+        <TextView
             android:id="@+id/editText4"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
