--- a/app/src/main/res/layout/activity_list1.xml
+++ b/app/src/main/res/layout/activity_list1.xml
@@ -71,7 +71,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/linearLayout3"
         android:layout_marginTop="103dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="1">
 
         <TextView
             android:id="@+id/textView10"
@@ -82,10 +83,20 @@
 
         <TextView
             android:id="@+id/Summ"
-            android:layout_width="match_parent"
+            android:layout_width="98dp"
             android:layout_height="match_parent"
             android:text="12345.6"
             android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="74dp"
+            android:layout_height="35dp"
+            android:layout_weight="0.35"
+            android:gravity="right"
+            android:text="@string/currency"
+            android:textSize="18sp" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -95,7 +106,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/linearLayout4"
         android:layout_marginTop="152dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="1">
 
         <TextView
             android:id="@+id/textView11"
@@ -106,10 +118,19 @@
 
         <TextView
             android:id="@+id/Summ2"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="0.12"
             android:text="12345.6"
             android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="91dp"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:text="@string/currency"
+            android:textSize="18sp" />
     </LinearLayout>
 
     <LinearLayout
