--- a/app/src/main/res/layout/activity_new_operation.xml
+++ b/app/src/main/res/layout/activity_new_operation.xml
@@ -60,16 +60,6 @@
                 android:layout_toRightOf="@+id/amountText"
                 android:text="12345" />
 
-            <Spinner
-                android:id="@+id/spinner"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="10dp"
-                android:layout_toRightOf="@+id/amountValue"
-                android:width="50dp"
-                android:contextClickable="true" />
-
             <TextView
                 android:id="@+id/amountText"
                 android:layout_width="wrap_content"
@@ -82,6 +72,17 @@
                 android:elevation="0dp"
                 android:text="Сумма"
                 android:textSize="24sp" />
+
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignBaseline="@+id/amountValue"
+                android:layout_alignBottom="@+id/amountValue"
+                android:layout_toEndOf="@+id/amountValue"
+                android:layout_toRightOf="@+id/amountValue"
+                android:width="50dp"
+                android:contextClickable="true" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -106,6 +107,18 @@
                 android:layout_toEndOf="@+id/textView2"
                 android:layout_toRightOf="@+id/textView2"
                 android:text="12345" />
+
+            <Spinner
+                android:id="@+id/spinner2"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignBaseline="@+id/editText2"
+                android:layout_alignBottom="@+id/editText2"
+                android:layout_toEndOf="@+id/editText2"
+                android:layout_toRightOf="@+id/editText2"
+                android:width="50dp"
+                android:contextClickable="true"
+                android:gravity="right|start" />
 
         </RelativeLayout>
 
