--- a/app/src/main/res/layout/activity_new_operation.xml
+++ b/app/src/main/res/layout/activity_new_operation.xml
@@ -100,7 +100,7 @@
                 android:textSize="24sp" />
 
             <EditText
-                android:id="@+id/editText2"
+                android:id="@+id/amountValue2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
@@ -112,10 +112,10 @@
                 android:id="@+id/spinner2"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_alignBaseline="@+id/editText2"
-                android:layout_alignBottom="@+id/editText2"
-                android:layout_toEndOf="@+id/editText2"
-                android:layout_toRightOf="@+id/editText2"
+                android:layout_alignBaseline="@+id/amountValue2"
+                android:layout_alignBottom="@+id/amountValue2"
+                android:layout_toEndOf="@+id/amountValue2"
+                android:layout_toRightOf="@+id/amountValue2"
                 android:width="50dp"
                 android:contextClickable="true"
                 android:gravity="right|start" />
