--- a/app/src/main/res/layout/activity_list1.xml
+++ b/app/src/main/res/layout/activity_list1.xml
@@ -10,12 +10,20 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="spreadsheet.exchangebook.List1">
 
-    <LinearLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/OperationsList"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:orientation="vertical" />
+
+    <!--LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/linearLayout6"
         android:layout_marginTop="16dp"
         android:orientation="horizontal">
 
@@ -41,7 +49,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/linearLayout2"
         android:layout_marginTop="68dp"
         android:orientation="horizontal"
         android:weightSum="1">
@@ -66,10 +73,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/linearLayout7"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/linearLayout3"
         android:layout_marginTop="103dp"
         android:orientation="horizontal"
         android:weightSum="1">
@@ -104,7 +109,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/linearLayout4"
         android:layout_marginTop="152dp"
         android:orientation="horizontal"
         android:weightSum="1">
@@ -148,7 +152,6 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/Commit2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -159,7 +162,6 @@
         android:weightSum="1">
 
         <TextView
-            android:id="@+id/Commit2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -176,6 +178,7 @@
             android:inputType="textPersonName"
             android:text="Все что вы хотели сказать но боялись " />
     </LinearLayout>
+-->
 
     <Button
         android:id="@+id/button4"
