--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -8,6 +8,12 @@
     android:paddingBottom="5dp"
     android:paddingTop="5dp">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </RelativeLayout>
+
     <TextView
         android:id="@+id/layout_item_from"
         android:layout_width="100dp"
@@ -76,5 +82,15 @@
         android:layout_below="@+id/layout_item_from"
         android:text="@+id/layout_item_datecurency"
         android:textSize="20sp" />
+
+    <Button
+
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/layout_item_tocurency"
+        android:text="View" />
 
 </RelativeLayout>
