--- a/app/src/main/res/layout/activity_youroperation.xml
+++ b/app/src/main/res/layout/activity_youroperation.xml
@@ -18,6 +18,8 @@
             android:id="@+id/textView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:textSize="18sp"
             android:text="Покупка" />
     </LinearLayout>
 
@@ -26,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="30dp"
         android:orientation="horizontal">
 
         <TextView
@@ -58,7 +60,7 @@
             android:id="@+id/textView10"
             android:layout_width="154dp"
             android:layout_height="wrap_content"
-            android:text="Сумма"
+            android:text="Валюта"
             android:textSize="24sp" />
 
         <TextView
@@ -100,7 +102,7 @@
             android:layout_height="match_parent"
             android:text="12345.6"
             android:textSize="24sp" />
-
+<!--
         <TextView
             android:id="@+id/youroperation_to_value_currency"
             android:layout_width="91dp"
@@ -108,8 +110,34 @@
             android:gravity="right"
             android:text="@string/currency"
             android:textSize="18sp" />
+-->
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="170dp"
+        android:orientation="horizontal"
+        android:weightSum="1">
+
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="154dp"
+            android:layout_height="wrap_content"
+            android:text="Курс"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/youroperation_curse"
+            android:layout_width="98dp"
+            android:layout_height="match_parent"
+            android:text="12345.6"
+            android:textSize="24sp" />
+
+
+    </LinearLayout>
     <Button
         android:id="@+id/youroperation_back"
         android:layout_width="wrap_content"
@@ -122,11 +150,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:weightSum="1"
         android:layout_above="@+id/youroperation_back"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:orientation="vertical"
-        android:weightSum="1">
+        android:layout_marginBottom="34dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -135,14 +164,17 @@
 
         <TextView
             android:id="@+id/youroperation_to_value_comment"
-            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/linearLayout5"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="91dp"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Все что вы хотели сказать но боялись " />
+            android:text="Все что вы хотели сказать но боялись "
+            android:layout_width="match_parent"
+            android:gravity="top|center_horizontal"
+            android:textSize="20sp"
+            android:elevation="0dp" />
     </LinearLayout>
 
 </RelativeLayout>
