--- a/app/src/main/res/layout/activity_youroperation.xml
+++ b/app/src/main/res/layout/activity_youroperation.xml
@@ -141,55 +141,55 @@
     </LinearLayout>
 
 
-
     <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:orientation="vertical"
-           android:weightSum="1"
-           android:layout_alignParentLeft="true"
-           android:layout_alignParentStart="true"
-           android:layout_marginTop="220dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="220dp"
+        android:orientation="vertical"
+        android:weightSum="1">
 
         <TextView
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="      Комментарии :" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="      Комментарии :" />
 
 
-   </LinearLayout>
+    </LinearLayout>
 
-   <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:orientation="vertical"
-          android:weightSum="1"
-          android:layout_alignParentLeft="true"
-          android:layout_alignParentStart="true"
-          android:layout_marginTop="240dp">
-       <TextView
-           android:layout_width="329dp"
-           android:layout_height="wrap_content"
-           android:id="@+id/youroperation_to_value_comment"
-           android:layout_below="@+id/linearLayout5"
-           android:layout_centerHorizontal="true"
-           android:inputType="textPersonName"
-           android:text="      Все что вы хотели сказать но боялись "
-           android:gravity="left"
-           android:textSize="24sp"
-           android:layout_gravity="center" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="240dp"
+        android:orientation="vertical"
+        android:weightSum="1">
 
-
-</LinearLayout>
-
-      <Button
-           android:id="@+id/youroperation_back"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_alignParentBottom="true"
-           android:layout_centerHorizontal="true"
-           android:layout_marginBottom="83dp"
-           android:text="@string/Back" />
+        <TextView
+            android:id="@+id/youroperation_to_value_comment"
+            android:layout_width="329dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/linearLayout5"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
+            android:gravity="left"
+            android:inputType="textPersonName"
+            android:text="comment"
+            android:textSize="24sp" />
 
 
-    </RelativeLayout>
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/youroperation_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="83dp"
+        android:text="@string/Back" />
+
+
+</RelativeLayout>
