--- a/app/src/main/res/layout/activity_new_operation.xml
+++ b/app/src/main/res/layout/activity_new_operation.xml
@@ -27,7 +27,7 @@
             android:layout_alignParentTop="true">
 
             <RadioButton
-                android:id="@+id/button5"
+                android:id="@+id/button5_sale"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
@@ -37,28 +37,27 @@
                 android:text="Продажа" />
 
             <TextView
-                android:text="Операция"
+                android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
+                android:layout_alignBottom="@+id/button7"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:id="@+id/textView4"
-                android:layout_alignBottom="@+id/button7"
+                android:layout_alignParentTop="true"
                 android:layout_toLeftOf="@+id/button7"
                 android:layout_toStartOf="@+id/button7"
+                android:text="Операция"
                 android:textSize="24sp"/>
 
             <RadioButton
-                android:id="@+id/button7"
+                android:id="@+id/button7_purchase"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Покупка"
-                android:layout_marginRight="11dp"
-                android:layout_marginEnd="11dp"
-                android:layout_alignParentTop="true"
-                android:layout_toLeftOf="@+id/button5"
-                android:layout_toStartOf="@+id/button5" />
+                android:layout_alignBaseline="@+id/textView4"
+                android:layout_alignBottom="@+id/textView4"
+                android:layout_toLeftOf="@+id/button5_sale"
+                android:layout_toStartOf="@+id/button5_sale"
+                android:text="Покупка" />
 
 
         </RelativeLayout>
@@ -110,22 +109,22 @@
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignTop="@+id/amountValue2"
                 android:width="100dp"
                 android:elevation="0dp"
                 android:text="Гривна"
-                android:textSize="24sp"
-                android:layout_alignTop="@+id/amountValue2"
-                android:layout_alignParentBottom="true" />
+                android:textSize="24sp" />
 
             <EditText
 
                 android:id="@+id/amountValue2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="12345"
                 android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/textView2"
                 android:layout_toRightOf="@+id/textView2"
-                android:layout_toEndOf="@+id/textView2"  />
+                android:text="12345" />
             <!--
                         <Spinner
                             android:id="@+id/spinner2"
@@ -169,10 +168,10 @@
                 android:orientation="horizontal">
 
                 <EditText
-                    android:background="@drawable/edittextstyle"
                     android:id="@+id/amountValue3"
                     android:layout_width="157dp"
                     android:layout_height="98dp"
+                    android:background="@drawable/edittextstyle"
                     android:ems="10"
                     android:inputType="textPersonName"
                     android:text="44 1 ваш текс 1" />
