--- a/app/src/main/res/layout/activity_youroperation.xml
+++ b/app/src/main/res/layout/activity_youroperation.xml
@@ -15,13 +15,21 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="     Покупка"
+            android:id="@+id/youroperation_to_value_currency"
+            android:layout_width="91dp"
+            android:layout_height="35dp"
+            android:gravity="right"
+            android:text="@string/currency"
             android:textSize="18sp" />
 
+        <!--
+           android:id="@+id/textView6"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_marginTop="10dp"
+           android:text="     Покупка"
+           android:textSize="18sp" />
+-->
     </LinearLayout>
 
     <LinearLayout
