--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -74,5 +74,16 @@
         android:layout_marginTop="12dp"
         android:text="@string/BackButton" />
 
+    <Button
+        android:id="@+id/button_sync_select"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/button6"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_toEndOf="@+id/button6"
+        android:layout_toRightOf="@+id/button6"
+        android:text="Button" />
+
 </RelativeLayout>
 
