--- a/app/src/main/res/layout/activity_new_operation.xml
+++ b/app/src/main/res/layout/activity_new_operation.xml
@@ -158,7 +158,7 @@
 
                 <Button
                     android:id="@+id/Save"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:onClick="onClick"
