--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -83,7 +83,7 @@
         android:layout_marginStart="24dp"
         android:layout_toEndOf="@+id/button6"
         android:layout_toRightOf="@+id/button6"
-        android:text="Button" />
+        android:text="SYNC" />
 
 </RelativeLayout>
 
