--- a/app/src/main/res/layout/activity_new_operation.xml
+++ b/app/src/main/res/layout/activity_new_operation.xml
@@ -40,12 +40,11 @@
                 android:id="@+id/spinner2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/textView4"
-                android:layout_alignBottom="@+id/textView4"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:layout_marginEnd="63dp"
-                android:layout_marginRight="63dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="38dp"
+                android:layout_marginRight="38dp"
                 android:width="50dp"
                 android:contextClickable="true"
                 android:gravity="right|start" />
@@ -85,11 +84,11 @@
                 android:id="@+id/spinner"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginLeft="43dp"
-                android:layout_marginStart="43dp"
-                android:layout_toEndOf="@+id/amountValue"
-                android:layout_toRightOf="@+id/amountValue"
+                android:layout_marginEnd="36dp"
+                android:layout_marginRight="36dp"
                 android:width="50dp"
                 android:contextClickable="true" />
         </RelativeLayout>
@@ -160,9 +159,8 @@
 
                 <Button
                     android:id="@+id/Save"
-                    android:layout_width="match_parent"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:onClick="onClick"
                     android:text="Сохранить" />
             </LinearLayout>
