--- a/app/src/main/res/layout/activity_sync.xml
+++ b/app/src/main/res/layout/activity_sync.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="spreadsheet.exchangebook.HttpExampleActivity">
+    tools:context="spreadsheet.exchangebook.SyncActivity">
 
     <Button
         android:id="@+id/buttonsync"
